Added launch file and moveit controller

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,11 +187,10 @@ target_link_libraries(thor_arm_controller_joystick ${catkin_LIBRARIES})
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+install(FILES
+   thor_arm_joystick_control.launch launch/thor_arm_joystick_control.launch
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 #############
 ## Testing ##
